# smtpserver

./: .gitignore  Cargo.toml  README.md  config.aml.example  test.msg
src/: command.rs  email.rs  error.rs  global.rs  main.rs  stream.rs  test.rs
