[package]
name = "smtpserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smtpclient =  {path = "../smtpclient" }
regex = "1"
chrono = "0.4.19"
aml = { git = "https://github.com/acottis/aml" }
native-tls = "*"

